2023-09-01  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.8-alpha05 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.8-alpha05: Foggy Wharf';git push
	git tag -a 5.1.8-alpha05 -m '';git push --tags

	* Disambiguate Frontier + Perlmutter nodes named login[0123456789][0123456789]

2023-08-31  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.8-alpha04 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.8-alpha04: Happy Valley';git push
	git tag -a 5.1.8-alpha04 -m 'all: Frontier';git push --tags

	* ncremap/ncclimo: modify to support Frontier

	* Build on Frontier with Makefile build-engine

2023-08-30  Charlie Zender  <zender@uci.edu>

	* Clarify error message with how to get filters working

	* Copy many variables from in.cdl to in_4.cdl to facilitate compression testing

2023-08-21  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.8-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.8-alpha03: Giggles';git push
	git tag -a 5.1.8-alpha03 -m 'ncks --chk_chr, --chk_mss';git push --tags

	* Refactor output of DIWG compliance checks to be more legible,	uniform for diwg_chk

	* Document --chk_chr, --chk_mss, --chk_nan

	* Add nco_chk_mss() to check for missing_value attributes

2023-08-18  Charlie Zender  <zender@uci.edu>

	* Add nco_chk_chr(), nm_cf_chk(), --chk_chr to check identifier	names for CF-Compliance (DIWG)

2023-08-16  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.8-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.8-alpha02: Victoria Beach';git push
	git tag -a 5.1.8-alpha02 -m 'all: allow NC_STRING instead of NC_CHAR atts; ncremap: nfr mpas grd rdn';git push --tags

	* nco_grd_nfr() test MPAS coordinates without units attributes for being radians not degrees

2023-08-15  Charlie Zender  <zender@uci.edu>

	* Remove WARNING statements about NC_STRING not being supported/CF-compliant

2023-08-14  Charlie Zender  <zender@uci.edu>

	* Verify CF bounds attribute now handled correctly when stored as NC_STRING
